styles.scss
body {
  padding: 0;
  margin: 1em;
  display: flex;
  flex-flow: column nowrap;
  font-family: Arial;
  font-size: 3vw;
  background-color: white;
  &::-webkit-scrollbar {
    width: 1em;
  }
  &::-webkit-scrollbar-track {
    background-color: white;
  }
  &::-webkit-scrollbar-thumb {
    box-shadow: inset 0 0 0.25em black;
    background-color: white;
  }

  @media (min-width: 992px) {
    font-size: 2vw;

    max-width: 960px;
    margin: 1em auto;
  }
  @media (min-width: 1200px) {
    font-size: 1vw;
    max-width: 1140px;
  }
}

.btn-group {
  display: inline-block;
  a {
    margin-right: 1em;
    &:last-child {
      margin-right: 0;
    }
  }
}

a {
  display: inline-block;
  padding: 0.5em 1em;
  text-decoration: none;
  user-select: none;
  cursor: pointer;
  transition: transform 0.5s ease-in-out;
  &:active,
  &:hover {
    transform: scale(1.05);
  }
  &:link {
    border: 0.25em double #1a0dab;
    color: #1a0dab;
  }
  &:visited {
    border: 0.25em double #609;
    color: #609;
  }
}

small {
  color: #006621;
}

header,
footer {
  margin-bottom: 1em;
  padding: 1em 0;
  text-align: center;
  div {
    margin-bottom: 1em;
  }
  div:last-child {
    margin-bottom: 0;
  }
}

header div {
  display: inline-block;
}

.card {
  display: flex;
  margin-bottom: 1em;
  .link {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 1em;
  }
  .content {
    flex: 1;
  }
}

.content {
  border: 0.25em solid black;
  box-shadow: 0.5em 0.5em 1em black;
  padding: 0.5em;
  text-align: left;
}

